c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_lex/char_bad_escape_sequence.c
int main(void)
{
    return '\y';
}